added clear db
